--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,29 @@
+version=0.0.3
+group=com.yshs.searchonmcmod
+java_version=21
+# Common
+minecraft_version=1.21.1
+mod_name=Search on MCMOD
+mod_author=bling-yshs
+mod_id=searchonmcmod
+license=MIT
+description=Search for item under the cursor on mcmod.cn
+minecraft_version_range=[1.21.1, 1.22)
+## This is the version of minecraft that the 'common' project uses, you can find a list of all versions here
+## https://projects.neoforged.net/neoforged/neoform
+neo_form_version=1.21.1-20240808.144430
+# The version of ParchmentMC that is used, see https://parchmentmc.org/docs/getting-started#choose-a-version for new versions
+parchment_minecraft=1.21
+parchment_version=2024.11.10
+# Fabric
+fabric_version=0.109.0+1.21.1
+fabric_loader_version=0.16.9
+# Forge
+forge_version=52.0.28
+forge_loader_version_range=[52,)
+# NeoForge
+neoforge_version=21.1.80
+neoforge_loader_version_range=[4,)
+# Gradle
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-minecraft_version=1.20.1
-minecraft_version_range=[1.20.1,1.21)
-forge_version=47.2.32
-forge_version_range=[47,)
-loader_version_range=[47,)
-mapping_channel=parchment
-mapping_version=2023.09.03-1.20.1
-mod_id=searchonmcmod
-mod_name=Search on MCMOD
-mod_license=MIT
-mod_version=0.0.2
-mod_group_id=com.yshs.searchonmcmod
-mod_authors=bling-yshs
-mod_description=Search for item under the cursor on mcmod.cn
