--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,5 @@
-org.gradle.jvmargs=-Xmx3G
-org.gradle.daemon=false
-minecraft_version=1.16.5
-minecraft_version_range=[1.16.5,1.17)
-forge_version=36.2.34
-forge_version_range=[36,)
-loader_version_range=[36,)
-mapping_channel=parchment
-mapping_version=2022.03.06-1.16.5
-mod_id=searchonmcmod
-mod_name=Search on MCMOD
-mod_license=MIT
-mod_version=0.0.2
-mod_group_id=com.yshs.searchonmcmod
-mod_authors=bling-yshs
-mod_description=Search for item under the cursor on mcmod.cn
+org.gradle.jvmargs=-Xmx2G
+
+group=com.yshs
+name=Search on MCMOD
+version=0.0.2
