--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,22 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-minecraft_version=1.18.2
+support_version=1.18.x
+minecraft_version=1.18.1
 minecraft_version_range=[1.18.1,1.19)
-forge_version=40.3.0
-forge_version_range=[40,)
-loader_version_range=[40,)
 mapping_channel=parchment
-mapping_version=2022.11.06-1.18.2
+parchment_date=2022.03.06
 mod_id=searchonmcmod
 mod_name=Search on MCMOD
 mod_license=MIT
-mod_version=0.0.2
+mod_version=0.0.3
 mod_group_id=com.yshs.searchonmcmod
 mod_authors=bling-yshs
 mod_description=Search for item under the cursor on mcmod.cn
+#forge
+forge_version=39.1.2
+forge_loader_version_range=[38,)
+#fabric
+fabric_loader_version=0.16.10
+fabric_api_version=0.46.6+1.18
+#other
+github_url=https://github.com/bling-yshs/search-on-mcmod
