--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-support_version=1.20.x
+support_version=1.20-1.20.4
 minecraft_version=1.20.1
-minecraft_version_range=[1.20.1,1.21)
+minecraft_version_range=[1.20.1,1.20.5)
 mapping_channel=parchment
 parchment_date=2023.09.03
 mod_id=searchonmcmod
@@ -14,7 +14,7 @@ mod_authors=bling-yshs
 mod_description=Search for item under the cursor on mcmod.cn
 #forge
 forge_version=47.3.25
-forge_loader_version_range=[46,)
+forge_loader_version_range=[46,50)
 #fabric
 fabric_loader_version=0.16.10
 fabric_api_version=0.92.3+1.20.1
