--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-support_version=1.20-1.20.4
-minecraft_version=1.20.1
-minecraft_version_range=[1.20.1,1.20.5)
+support_version=1.20.6
+minecraft_version=1.20.6
+minecraft_version_range=[1.20.6,1.21)
 mapping_channel=parchment
-parchment_date=2023.09.03
+parchment_date=2024.06.16
 mod_id=searchonmcmod
 mod_name=Search on MCMOD
 mod_license=MIT
@@ -13,10 +13,10 @@ mod_group_id=com.yshs.searchonmcmod
 mod_authors=bling-yshs
 mod_description=Search for item under the cursor on mcmod.cn
 #forge
-forge_version=47.3.25
-forge_loader_version_range=[46,50)
+forge_version=50.1.34
+forge_loader_version_range=[50,)
 #fabric
 fabric_loader_version=0.16.10
-fabric_api_version=0.92.3+1.20.1
+fabric_api_version=0.100.8+1.20.6
 #other
 github_url=https://github.com/bling-yshs/search-on-mcmod
