--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-support_version=1.20-1.20.4
+support_version=1.20.x
 minecraft_version=1.20.1
 minecraft_version_range=[1.20.1,1.20.5)
 mapping_channel=parchment
