--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@ version=0.0.3
 group=com.yshs.searchonmcmod
 java_version=21
 # Common
+support_version=1.21.x
 minecraft_version=1.21.1
 mod_name=Search on MCMOD
 mod_author=bling-yshs
@@ -13,17 +14,19 @@ minecraft_version_range=[1.21.1, 1.22)
 ## https://projects.neoforged.net/neoforged/neoform
 neo_form_version=1.21.1-20240808.144430
 # The version of ParchmentMC that is used, see https://parchmentmc.org/docs/getting-started#choose-a-version for new versions
-parchment_minecraft=1.21
-parchment_version=2024.11.10
+parchment_minecraft=1.21.1
+parchment_version=2024.11.17
 # Fabric
 fabric_version=0.109.0+1.21.1
 fabric_loader_version=0.16.9
-# Forge
-forge_version=52.0.28
-forge_loader_version_range=[52,)
+# Forge not supported
+forge_version=1.0.0
+forge_loader_version_range=[1,)
 # NeoForge
 neoforge_version=21.1.80
 neoforge_loader_version_range=[4,)
 # Gradle
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+# Other
+github_url=https://github.com/bling-yshs/search-on-mcmod
