--- a/.github/workflows/commit-build.yml
+++ b/.github/workflows/commit-build.yml
@@ -29,6 +29,4 @@ jobs:
         with:
           name: build-result
           path: |
-            fabric/build/libs/*[0-9].jar
-            neoforge/build/libs/*[0-9].jar
-            forge/build/libs/*[0-9].jar
+            build/libs/*[0-9].jar
