ci: 自动发布到 Release

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -50,3 +50,9 @@ tasks.named('processResources', ProcessResources).configure {
 tasks.withType(JavaCompile).configureEach {
     it.options.release = 21
 }
+
+tasks.register('printVersion') {
+    doLast {
+        println "${project.mod_version}"
+    }
+}
