--- a/.github/workflows/commit-build.yml
+++ b/.github/workflows/commit-build.yml
@@ -22,13 +22,39 @@ jobs:
         run: chmod +x gradlew
 
       - name: 构建项目 (Build project)
-        run: ./gradlew build --no-daemon
+        id: gradle-build
+        run: |
+          ./gradlew build --no-daemon
+          echo "::set-output name=version::$(./gradlew -q printVersion --no-daemon)"
 
       - name: 上传构建产物 (Upload artifacts)
         uses: actions/upload-artifact@v4
         with:
           name: build-result
           path: |
+            fabric/build/libs/*[0-9].jar
+            neoforge/build/libs/*[0-9].jar
+            forge/build/libs/*[0-9].jar
+
+      - name: 生成更新日志 (Generate changelog)
+        id: changelog
+        uses: jaywcjlove/changelog-generator@main
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          filter-author: (jaywcjlove|小弟调调™|dependabot|renovate\\[bot\\]|dependabot\\[bot\\]|Renovate Bot)
+          filter: '^(release|fixup|docs|ci|style|test|build):'
+
+      - name: 上传编译结果到 Release (Upload build result to Release)
+        uses: ncipollo/release-action@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          tag: "v${{ steps.gradle-build.outputs.version }}"
+          prerelease: true
+          updateOnlyUnreleased: true
+          body: |
+            ${{ steps.changelog.outputs.compareurl }}
+            ${{ steps.changelog.outputs.changelog }}
+          artifacts: |
             fabric/build/libs/*[0-9].jar
             neoforge/build/libs/*[0-9].jar
             forge/build/libs/*[0-9].jar
