--- a/.github/workflows/commit-build.yml
+++ b/.github/workflows/commit-build.yml
@@ -25,7 +25,7 @@ jobs:
         id: gradle-build
         run: |
           ./gradlew build --no-daemon
-          echo "::set-output name=version::$(./gradlew -q printVersion --no-daemon)"
+          echo "version=$(./gradlew -q printVersion --no-daemon)" >> $GITHUB_OUTPUT
 
       - name: 上传构建产物 (Upload artifacts)
         uses: actions/upload-artifact@v4
@@ -34,6 +34,7 @@ jobs:
           if-no-files-found: ignore
           path: |
             neoforge/build/libs/*[0-9].jar
+
       - name: 上传构建产物 (Upload artifacts)
         uses: actions/upload-artifact@v4
         with:
@@ -41,6 +42,7 @@ jobs:
           if-no-files-found: ignore
           path: |
             forge/build/libs/*[0-9].jar
+
       - name: 上传构建产物 (Upload artifacts)
         uses: actions/upload-artifact@v4
         with:
@@ -49,27 +51,26 @@ jobs:
           path: |
             fabric/build/libs/*[0-9].jar
 
-      - uses: actions/upload-artifact/merge@v4
+      - name: 合并构建产物 (Merge artifacts)
+        uses: actions/upload-artifact/merge@v4
+        with:
+          name: merged-artifacts
 
-      #      - name: 生成更新日志 (Generate changelog)
-      #        id: changelog
-      #        uses: jaywcjlove/changelog-generator@main
-      #        with:
-      #          token: ${{ secrets.GITHUB_TOKEN }}
-      #          filter-author: (jaywcjlove|小弟调调™|dependabot|renovate\\[bot\\]|dependabot\\[bot\\]|Renovate Bot)
-      #          filter: '^(release|fixup|docs|ci|style|test|build):'
+      - name: 下载 Artifact (Download Artifact)
+        uses: actions/download-artifact@v4
+        with:
+          path: ./download
+          name: merged-artifacts
 
-#      - name: 上传编译结果到 Release (Upload build result to Release)
-#        uses: ncipollo/release-action@v1
-#        with:
-#          token: ${{ secrets.GITHUB_TOKEN }}
-#          tag: "v${{ steps.gradle-build.outputs.version }}"
-#          prerelease: true
-#          updateOnlyUnreleased: true
-#          #          body: |
-#          #            ${{ steps.changelog.outputs.compareurl }}
-#          #            ${{ steps.changelog.outputs.changelog }}
-#          artifacts: |
-#            fabric/build/libs/*[0-9].jar
-#            neoforge/build/libs/*[0-9].jar
-#            forge/build/libs/*[0-9].jar
+      - name: 上传编译结果到 Release (Upload build result to Release)
+        uses: ncipollo/release-action@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          tag: "v${{ steps.gradle-build.outputs.version }}"
+          prerelease: true
+          updateOnlyUnreleased: true
+          #          body: |
+          #            ${{ steps.changelog.outputs.compareurl }}
+          #            ${{ steps.changelog.outputs.changelog }}
+          artifacts: |
+            ./download/*.jar
