ci: 自动发布到 Release

--- a/.github/workflows/commit-build.yml
+++ b/.github/workflows/commit-build.yml
@@ -68,6 +68,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           tag: "v${{ steps.gradle-build.outputs.version }}"
           prerelease: true
+          allowUpdates: true
           updateOnlyUnreleased: true
           #          body: |
           #            ${{ steps.changelog.outputs.compareurl }}
