--- a/build.gradle
+++ b/build.gradle
@@ -7,3 +7,9 @@ plugins {
 tasks.withType(JavaCompile).configureEach {
     options.encoding = "UTF-8"
 }
+
+tasks.register('printVersion') {
+    doLast {
+        println "${project.mod_version}"
+    }
+}
