Revert "ci: 修改为 draft"
This reverts commit b30c88c74946a71cdc1d2f761ee4dfe2563402a9.

--- a/.github/workflows/commit-build.yml
+++ b/.github/workflows/commit-build.yml
@@ -67,9 +67,11 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           tag: "v${{ steps.gradle-build.outputs.version }}"
-          draft: true
+          prerelease: true
           allowUpdates: true
           updateOnlyUnreleased: true
-          omitBodyDuringUpdate: true
+          #          body: |
+          #            ${{ steps.changelog.outputs.compareurl }}
+          #            ${{ steps.changelog.outputs.changelog }}
           artifacts: |
             ./download/*.jar
