ci: 更新时保留正文

--- a/.github/workflows/commit-build.yml
+++ b/.github/workflows/commit-build.yml
@@ -22,10 +22,36 @@ jobs:
         run: chmod +x gradlew
 
       - name: 构建项目 (Build project)
-        run: ./gradlew build --no-daemon
+        id: gradle-build
+        run: |
+          ./gradlew build --no-daemon
+          echo "version=$(./gradlew -q printVersion --no-daemon)" >> $GITHUB_OUTPUT
 
       - name: 上传构建产物 (Upload artifacts)
         uses: actions/upload-artifact@v4
         with:
-          name: search-on-mcmod-forge
-          path: build/libs/*.jar
+          name: merged-artifacts
+          if-no-files-found: ignore
+          path: |
+            build/libs/*[0-9].jar
+
+      - name: 下载 Artifact (Download Artifact)
+        uses: actions/download-artifact@v4
+        with:
+          path: ./download
+          name: merged-artifacts
+
+      - name: 上传编译结果到 Release (Upload build result to Release)
+        uses: ncipollo/release-action@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          tag: "v${{ steps.gradle-build.outputs.version }}"
+          prerelease: true
+          allowUpdates: true
+          updateOnlyUnreleased: true
+          omitBodyDuringUpdate: true
+          #          body: |
+          #            ${{ steps.changelog.outputs.compareurl }}
+          #            ${{ steps.changelog.outputs.changelog }}
+          artifacts: |
+            ./download/*.jar
