ci: 更新时保留正文

--- a/.github/workflows/commit-build.yml
+++ b/.github/workflows/commit-build.yml
@@ -49,6 +49,7 @@ jobs:
           prerelease: true
           allowUpdates: true
           updateOnlyUnreleased: true
+          omitBodyDuringUpdate: true
           #          body: |
           #            ${{ steps.changelog.outputs.compareurl }}
           #            ${{ steps.changelog.outputs.changelog }}
