--- a/build.gradle
+++ b/build.gradle
@@ -128,3 +128,9 @@ publishing {
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
 }
+
+tasks.register('printVersion') {
+    doLast {
+        println "${project.mod_version}"
+    }
+}
