--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ version = mod_version
 group = mod_group_id
 
 base {
-    archivesName = "search-on-mcmod-forge-${minecraft_version}"
+    archivesName = "searchonmcmod-forge-${minecraft_version}"
 }
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(8)
