ci: 支持只发布选择的版本

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,19 +7,34 @@ on:
         description: '输入要发布的版本号'
         required: true
         type: string
-      mc_versions:
-        description: '选择要发布的 Minecraft 版本'
-        required: true
-        type: choice
-        options:
-          - '1.21.x'
-          - '1.20.6'
-          - '1.20.x'
-          - '1.19.x'
-          - '1.18.x'
-          - '1.16.5'
-          - '1.12.2'
-        multiple: true
+      mc_1_21_x:
+        description: '发布 1.21.x 版本'
+        type: boolean
+        default: true
+      mc_1_20_6:
+        description: '发布 1.20.6 版本'
+        type: boolean
+        default: true
+      mc_1_20_x:
+        description: '发布 1.20.x 版本'
+        type: boolean
+        default: true
+      mc_1_19_x:
+        description: '发布 1.19.x 版本'
+        type: boolean
+        default: true
+      mc_1_18_x:
+        description: '发布 1.18.x 版本'
+        type: boolean
+        default: true
+      mc_1_16_5:
+        description: '发布 1.16.5 版本'
+        type: boolean
+        default: true
+      mc_1_12_2:
+        description: '发布 1.12.2 版本'
+        type: boolean
+        default: true
 
 jobs:
   setup:
@@ -57,10 +72,23 @@ jobs:
       - name: 设置矩阵 (Set matrix)
         id: set-matrix
         env:
-          GITHUB_SELECTED_VERSIONS: ${{ join(github.event.inputs.mc_versions, ',') }}
+          GITHUB_SELECTED_VERSIONS: ${{ steps.get-selected-versions.outputs.versions }}
         run: |
           output=$(python .github/scripts/upload_modrinth.py)
           echo "matrix=$output" >> $GITHUB_OUTPUT
+
+      - name: 获取选中的版本 (Get selected versions)
+        id: get-selected-versions
+        run: |
+          versions=()
+          ${{ inputs.mc_1_21_x == true }} && versions+=("1.21.x")
+          ${{ inputs.mc_1_20_6 == true }} && versions+=("1.20.6")
+          ${{ inputs.mc_1_20_x == true }} && versions+=("1.20.x")
+          ${{ inputs.mc_1_19_x == true }} && versions+=("1.19.x")
+          ${{ inputs.mc_1_18_x == true }} && versions+=("1.18.x")
+          ${{ inputs.mc_1_16_5 == true }} && versions+=("1.16.5")
+          ${{ inputs.mc_1_12_2 == true }} && versions+=("1.12.2")
+          echo "versions=${versions[*]}" >> $GITHUB_OUTPUT
 
   upload-to-modrinth:
     needs: setup
