ci: 更新发布版本号描述，明确不需要带v

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: '输入要发布的版本号'
+        description: '输入要发布的版本号（不需要带v）'
         required: true
         type: string
       skip_version_check:
