--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,16 @@
 plugins {
     // see https://fabricmc.net/develop/ for new versions
-    id 'fabric-loom' version '1.8-SNAPSHOT' apply false
+    id 'fabric-loom' version '1.13-SNAPSHOT' apply false
     // see https://projects.neoforged.net/neoforged/moddevgradle for new versions
-    id 'net.neoforged.moddev' version '2.0.75' apply false
+    id 'net.neoforged.moddev' version '2.0.123' apply false
 }
+
 tasks.withType(JavaCompile).configureEach {
     options.encoding = "UTF-8"
 }
 
 tasks.register('printVersion') {
     doLast {
-        println "${project.mod_version}"
+        println "${mod_version}"
     }
 }
