--- a/gradle.properties
+++ b/gradle.properties
@@ -3,28 +3,28 @@ mod_version=0.0.7
 group=com.yshs.searchonmcmod
 java_version=21
 # Common
-support_version=1.21.x
-minecraft_version=1.21.1
+support_version=1.21.10
+minecraft_version=1.21.10
 mod_name=Search on MCMOD
 mod_author=bling-yshs
 mod_id=searchonmcmod
 license=MIT
 description=Search for item under the cursor on mcmod.cn
-minecraft_version_range=[1.21.1, 1.22)
+minecraft_version_range=[1.21.9, 1.22)
 ## This is the version of minecraft that the 'common' project uses, you can find a list of all versions here
 ## https://projects.neoforged.net/neoforged/neoform
-neo_form_version=1.21.1-20240808.144430
+neo_form_version=1.21.10-20251010.172816
 # The version of ParchmentMC that is used, see https://parchmentmc.org/docs/getting-started#choose-a-version for new versions
-parchment_minecraft=1.21.1
-parchment_version=2024.11.17
-# Fabric
-fabric_version=0.109.0+1.21.1
-fabric_loader_version=0.16.9
+parchment_minecraft=1.21.10
+parchment_version=2025.10.12
+# Fabric https://fabricmc.net/develop/
+fabric_version=0.138.4+1.21.10
+fabric_loader_version=0.18.2
 # Forge not supported
 forge_version=1.0.0
 forge_loader_version_range=[1,)
-# NeoForge
-neoforge_version=21.1.80
+# NeoForge https://neoforged.net/
+neoforge_version=21.10.64
 neoforge_loader_version_range=[4,)
 # Gradle
 org.gradle.jvmargs=-Xmx3G
