--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
-version=0.0.7
-mod_version=0.0.7
+version=0.0.7.3
+mod_version=0.0.7.3
 group=com.yshs.searchonmcmod
 java_version=21
 # Common
-support_version=1.21.x
+support_version=1.21-1.21.8
 minecraft_version=1.21.1
 mod_name=Search on MCMOD
 mod_author=bling-yshs
