chore(build): 提升版本并更新兼容范围

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
-version=0.0.73
-mod_version=0.0.73
+version=0.0.7.3
+mod_version=0.0.7.3
 group=com.yshs.searchonmcmod
 java_version=21
 # Common
-support_version=1.21.10
+support_version=1.21.9-1.21.10
 minecraft_version=1.21.10
 mod_name=Search on MCMOD
 mod_author=bling-yshs
